# AI-Video-Analyst

./: .gitignore  README.md  ccFbfwTWkMA.srt  main.py  pyproject.toml  requirements.txt  srt_downloader.py  transcript_video.py  video_analyzer.py
ai_video_analyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
