[project]
name = "ai-video-analyst"
version = "0.1.0"
description = "Analisis video menggunakan OpenAI dan subtitle SRT."
authors = [
    { name = "Indra Putra Mahayuda", email = "indraa25.pmy@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "srt>=3.0.0",
    "google-generativeai==0.8.5",
    "youtube-transcript-api>=0.4.1",
    "streamlit>=1.47.1",
    "youtube-transcript-api>=1.2.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "srt_downloader", "video_analyzer"]